more detail for bam example

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@Manual{R-gdb,
+    title = {GenomeInfoDb: Utilities for manipulating chromosome and other 'seqname'
+identifiers},
+    author = {Sonali Arora and Martin Morgan and Marc Carlson and H. Pagès},
+    year = {2018},
+    note = {R package version 1.16.0},
+  }
+
 @Article{R-ggbio,
     title = {ggbio: an R package for extending the grammar of graphics for genomic data},
     author = {Tengfei Yin and Dianne Cook and Michael Lawrence},
