--- a/paper.Rmd
+++ b/paper.Rmd
@@ -35,7 +35,6 @@ opts_chunk$set(message = FALSE,
                fig.align = "center")
 # for peak figures
 library(ggbio)
-
 library(plyranges)
 
 # -- Data from the Human Epigenomics RoadMap consortium
@@ -55,6 +54,14 @@ if (!file.exists(h1_bam))
     url = "ftp://ftp.ncbi.nlm.nih.gov/geo/samples/GSM433nnn/GSM433167/suppl/GSM433167%5FBI%2EH3K27me3%2Ebam",
     destfile = h1_bam
   )
+
+h1_bam_sorted <- "./data/GSM433167_BI.H3K27me3.sorted.bam"
+
+# sort and index bam
+if (!file.exists(h1_bam_sorted)) {
+  Rsamtools::sortBam(h1_bam, "./data/GSM433167_BI.H3K27me3.sorted")
+  Rsamtools::indexBam(h1_bam_sorted)
+}
 
 # array data for h1 cell line
 # illumina annotations
@@ -516,29 +523,40 @@ Another common operation in genomics data analysis is to compute data
 summaries over genomic windows. In `plyranges` this can be achieved via
 the `group_by_overlaps` operator. Continuing with the data from the 
 Human Epigenome Roadmap Consortium data, we can count the number of reads
-that fall into a fixed bins of size 10000bp over a BAM file of H3K27Me3 methylation
-marks from the H1 cell line. We extract reads that have a mapping quality
-score greater than 20:
+that fall into a fixed bins of size 10000bp over a sorted and indexed 
+BAM file of H3K27Me3 methylation marks from the H1 cell line. 
 
-```{r, eval = FALSE}
-alignments <- read_bam(h1_bam) %>%
-  filter(mapq > 20) 
+We can resuse the annotation information from our BigWig file example, as the
+BAM file was aligned to the hg19 genome build. Alignments over
+the mitochondrial genome are dropped using the `dropSeqlevels` function
+from the Bioconductor package `GenomeInfoDb` @R-gdb.
+```{r locations, eval = FALSE}
+locations <- bw_file %>%
+  get_genome_info() %>% 
+  dropSeqlevels("chrM", pruning.mode = "coarse") %>%
+  set_genome_info(genome = "hg19") 
 ```
 
-Note that the BAM file is only read into memory once we perform an operation
-on it. Because of interoperability over Bioconductor, we can generate
-genomic bins using the `tile` function from `GenomicRanges`:
+To generate bins of width 10000bp we can use the `tile` function from 
+`GenomicRanges`:
 
 ```{r, eval = FALSE}
-bins <- tile(h1_bam, width = 10000)
+bins <- tile(locations, width = 10000)
+```
+
+Next we only read in alignments if they have a map quality score
+greater than 20.
+```{r, eval = FALSE}
+alignments <- read_bam(h1_bam_sorted) %>%
+    filter(mapq > 20) 
 ```
 
 Finally, we can use `group_by_overlaps` with `summarise` to compute the
 total number of reads within each window.
 
 ```{r, eval = FALSE}
-h1_bam_read_summary <- h1_bam %>%
-  group_by_overlaps(bins) %>%
+alignments_summary <- bins %>%
+  group_by_overlaps(alginments) %>%
   summarise(n_reads = n())
 ```
 
